--- a/backend/package.json
+++ b/backend/package.json
@@ -3,21 +3,25 @@
     "version": "1.0.0",
     "main": "dist/server.js",
     "scripts": {
-      "dev": "ts-node-dev --respawn src/server.ts",
-      "build": "tsc"
+        "dev": "ts-node-dev --respawn src/server.ts",
+        "seed": "ts-node scripts/seed.ts",
+        "build": "tsc"
     },
     "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "mongoose": "^7.5.0"
+        "compression": "^1.8.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.5.1",
+        "helmet": "^8.1.0",
+        "mongoose": "^7.5.0",
+        "winston": "^3.17.0"
     },
     "devDependencies": {
-      "@types/cors": "^2.8.17",
-      "@types/express": "^4.17.21",
-      "@types/node": "^20.5.0",
-      "ts-node-dev": "^2.0.0",
-      "typescript": "^5.2.0"
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.5.0",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.2.0"
     }
-  }
-  
+}
