--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,10 @@
         "winston": "^3.17.0"
     },
     "devDependencies": {
+        "@types/compression": "^1.8.1",
+        "@types/cookie-parser": "^1.4.9",
         "@types/cors": "^2.8.17",
+        "@types/csurf": "^1.11.5",
         "@types/express": "^4.17.21",
         "@types/node": "^20.5.0",
         "ts-node-dev": "^2.0.0",
