login and logout

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb://localhost:27017/
 PORT=5001
-JWT_SECRET=
+JWT_SECRET=u7cEkvZpdW6wQa8oBqbJv7ph5ej50pZmM6Lzk92ud30= #openssl rand -base64 32 created it
 NODE_ENV=development
