--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-rate-limit": "^7.5.1",
+        "express-session": "^1.18.1",
         "helmet": "^8.1.0",
         "mongoose": "^7.5.0",
         "winston": "^3.17.0"
@@ -23,6 +24,7 @@
         "@types/cors": "^2.8.17",
         "@types/csurf": "^1.11.5",
         "@types/express": "^4.17.21",
+        "@types/express-session": "^1.18.2",
         "@types/node": "^20.5.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.2.0"
