--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "csurf": "^1.11.0",
-    "jsonwebtoken": "^9.0.2"
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
-    "@types/jsonwebtoken": "^9.0.10"
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34"
   }
 }
