--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,37 @@
-version: "3.9"
+# version: "3.9"
 
-services:
-  mongo:
-    image: mongo
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo-data:/data/db
+# services:
+#   mongo:
+#     image: mongo
+#     ports:
+#       - "27017:27017"
+#     volumes:
+#       - mongo-data:/data/db
 
-  backend:
-    build: ./backend
-    ports:
-      - "5001:5001"
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/
-      - PORT=5001
-    depends_on:
-      - mongo
-    volumes:
-      - ../backend:/app
-      - /app/node_modules
+#   backend:
+#     build: ./backend
+#     ports:
+#       - "5001:5001"
+#     environment:
+#       - MONGO_URI=mongodb://mongo:27017/
+#       - PORT=5001
+#     depends_on:
+#       - mongo
+#     volumes:
+#       - ../backend:/app
+#       - /app/node_modules
 
-  frontend:
-    build: ./frontend
-    ports:
-      - "3000:3000"
-    depends_on:
-      - backend
-    environment:
-      - NEXT_PUBLIC_BACKEND_URL=http://localhost:5001
-    volumes:
-      - ../frontend:/app
-      - /app/node_modules
+#   frontend:
+#     build: ./frontend
+#     ports:
+#       - "3000:3000"
+#     depends_on:
+#       - backend
+#     environment:
+#       - NEXT_PUBLIC_BACKEND_URL=http://localhost:5001
+#     volumes:
+#       - ../frontend:/app
+#       - /app/node_modules
 
-volumes:
-  mongo-data:
+# volumes:
+#   mongo-data:
