--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "dependencies": {
         "next": "14.0.0",
         "react": "^18.0.0",
-        "react-dom": "^18.0.0"
+        "react-dom": "^18.0.0",
+        "react-router-dom": "^7.6.3"
     },
     "devDependencies": {
         "@types/node": "24.0.13",
         "@types/react": "19.1.8",
+        "@types/react-dom": "^19.1.6",
+        "@types/react-router-dom": "^5.3.3",
         "typescript": "^5.0.0"
     }
 }
