--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "swagger-ui-express": "^5.0.1",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
