auth support for both session and oauth

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,10 @@
         "express-session": "^1.18.1",
         "helmet": "^8.1.0",
         "mongoose": "^7.5.0",
+        "passport": "^0.7.0",
+        "passport-apple": "^2.0.2",
+        "passport-azure-ad": "^4.3.5",
+        "passport-google-oauth20": "^2.0.0",
         "winston": "^3.17.0"
     },
     "devDependencies": {
@@ -26,6 +30,7 @@
         "@types/express": "^4.17.21",
         "@types/express-session": "^1.18.2",
         "@types/node": "^20.5.0",
+        "@types/passport": "^1.0.17",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.2.0"
     }
