--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,28 @@
-# version: "3.9"
+services:
+  postgres:
+    image: postgres:15-alpine
+    container_name: career-compass-postgres
+    environment:
+      POSTGRES_DB: career_compass
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./postgres-init:/docker-entrypoint-initdb.d
+    networks:
+      - career-compass-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d career_compass"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-# services:
-#   mongo:
-#     image: mongo
-#     ports:
-#       - "27017:27017"
-#     volumes:
-#       - mongo-data:/data/db
+volumes:
+  postgres_data:
 
-#   backend:
-#     build: ./backend
-#     ports:
-#       - "5001:5001"
-#     environment:
-#       - MONGO_URI=mongodb://mongo:27017/
-#       - PORT=5001
-#     depends_on:
-#       - mongo
-#     volumes:
-#       - ../backend:/app
-#       - /app/node_modules
-
-#   frontend:
-#     build: ./frontend
-#     ports:
-#       - "3000:3000"
-#     depends_on:
-#       - backend
-#     environment:
-#       - NEXT_PUBLIC_BACKEND_URL=http://localhost:5001
-#     volumes:
-#       - ../frontend:/app
-#       - /app/node_modules
-
-# volumes:
-#   mongo-data:
+networks:
+  career-compass-network:
+    driver: bridge
