--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 3000",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:resume": "jest --testPathPattern=resumes/add",
+    "test:api": "jest --testPathPattern=api/resumes",
+    "test:e2e": "jest --config jest.config.node.js --testPathPattern=resume-database",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:cypress": "cypress run --spec 'cypress/e2e/job-tracker-enhanced.cy.ts'",
+    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
+    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "typecheck": "tsc --noEmit",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:clear-seeded": "tsx prisma/clear-seeded-data.ts",
+    "db:clear": "tsx prisma/clear-data.ts",
+    "db:push": "prisma db push",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@genkit-ai/next": "^1.14.1",
     "@genkit-ai/vertexai": "^1.14.1",
     "@google/genai": "^1.9.0",
     "@hookform/resolvers": "^4.1.3",
+    "@prisma/client": "^6.14.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -39,6 +55,7 @@
     "@tiptap/pm": "^2.5.4",
     "@tiptap/react": "^2.5.4",
     "@tiptap/starter-kit": "^2.5.4",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -53,6 +70,7 @@
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "pg": "^8.16.2",
+    "prisma": "^6.14.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -60,15 +78,24 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cypress": "^14.5.4",
     "genkit-cli": "^1.8.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.4",
     "typescript": "^5"
   }
 }
