--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,7 +64,8 @@
     "genkit": "^1.14.1",
     "genkitx-anthropic": "^0.23.1",
     "genkitx-groq": "^0.23.0",
-    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
