--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,7 +4,7 @@
   "framework": "nextjs",
   "functions": {
     "app/api/**/*.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs18.x@18.17.0"
     }
   },
   "env": {
