--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "test:resume": "jest --testPathPattern=resumes/add",
     "test:api": "jest --testPathPattern=api/resumes",
     "test:e2e": "jest --config jest.config.node.js --testPathPattern=resume-database",
+    "test:database": "jest --config jest.config.database.js",
+    "test:seed": "jest --config jest.config.database.js --testPathPattern=seed-script",
+    "test:mock": "jest --config jest.config.simple.js --testPathPattern=mock-seeding",
+    "db:setup-test": "node scripts/setup-test-db.js",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "test:cypress": "cypress run --spec 'cypress/e2e/job-tracker-enhanced.cy.ts'",
@@ -98,6 +102,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.4.1",
     "tsx": "^4.20.4",
     "typescript": "^5"
   }
